# py-fast-stack

./: .env.example  .gitignore  AI_DEVELOPMENT_GUIDE.md  ENDPOINT_GROUPS.md  MCP_SERVER_IMPLEMENTATION.md  README.md  ROUTES_ORGANIZATION.md  SEO_IMPROVEMENT_GUIDE.md  clean.py  gunicorn.conf.py  nginx.conf.example  pyproject.toml  run.py  run_tests.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  server_stats.py  subscriptions.py  system.py  users.py
app/core/: auth_dependencies.py  config.py  errors.py  middleware.py  rate_limiter.py  security.py
app/crud/: __init__.py  base.py  subscription.py  user.py
app/db/: init_db.py  session.py
app/models/: __init__.py  subscription.py  user.py
app/schemas/: __init__.py  server_stats.py  subscription.py  token.py  user.py
app/web/: __init__.py  admin_routes.py  auth_routes.py  public_routes.py  routes.py
demo/: README.md  generate_dummy_data.py
docs/: MCP_SERVER_IMPLEMENTATION.md  RATE_LIMITING_GUIDE.md  SEO_IMPROVEMENT_GUIDE.md
scripts/: run_load_test.py
static/css/: style.css
static/js/: main.js
templates/: dashboard.html  index.html  profile.html  server_stats.html  server_stats_cards.html  subscribers.html  user_edit.html  users.html
templates/auth/: login.html  register.html
templates/components/: alerts.html  footer.html  header.html  macros.html  subscription-modal.html
templates/errors/: 403.html  404.html  429.html  500.html
templates/layouts/: base.html
tests/: README.md  __init__.py  conftest.py  create_test_users.py  setup_test_db.py  test_auth.py  test_performance.py  test_rate_limiter.py  test_server_stats.py  test_subscribers_web.py  test_system_stats.py  test_users.py  test_users_web.py
